[package]
name = "rustpi"
version = "0.1.0"
edition = "2021"
authors = ["tonnylyz <lyztonny@gmail.com>"]

[dependencies]
# fundamental
cfg-if = "1.0.0"
log = "0.4.14"
static_assertions = "1.1.0"

buddy_system_allocator = "0.9.0"
spin = "0.9.2"
xmas-elf = "0.9.0"
tock-registers = "0.8.1"
hardware = { path = "hardware" }

rpabi = { path = "rpabi" }
unwind = { path = "unwind" }
fdt = { git = "https://github.com/tonnylyz/fdt" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.3.1"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { git = "https://github.com/tonnylyz/riscv", branch = "rustpi" }

[features]
default = ["user_release", "virt"]
user_release = []
virt = []
k210 = []

[profile.release]
debug = true

[[bin]]
name = "rustpi"
path = "rpkernel/main.rs"
