[package]
name = "common"
version = "0.1.0"
authors = ["tonnylyz <lyztonny@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"

[dependencies.tock-registers]
version = "0.7.0"
default-features = false
features = ["register_types"]