[package]
name = "rpefistub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpabi = { path = "../rpabi" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
uefi = { version = "0.26", default-features = false, features = [] }
#uefi-services = { version = "0.23", default-features = false, features = [] }
x86_64 = "0.14"