[package]
name = "rpstdlib"
version = "0.1.0"
authors = ["tonnylyz <lyztonny@gmail.com>"]
edition = "2021"

[dependencies]
spin = "0.9.2"
buddy_system_allocator = "0.9.0"

rpabi = { path = "../rpabi" }
rpsyscall = { path = "../rpsyscall" }
rpservapi = { path = "../rpservapi" }

redox_syscall = { git = "https://github.com/tonnylyz/redox_syscall", branch = "rustpi" }


[features]
default = []
libc = []