[package]
name = "trusted"
version = "0.1.0"
edition = "2021"
authors = ["tonnylyz <lyztonny@gmail.com>"]

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
log = "0.4.14"
fallible_collections = "0.4.3"

libtrusted = { path = "../lib/libtrusted" }
microcall = { path = "../lib/microcall" }
common = { path = "../common", features = ["asm"] }
redox = { path = "../lib/redox" }
fs = { path = "../lib/fs" }
unwind = { path = "../lib/unwind" }
cs = { path = "../lib/cs" }
inject = { path = "../inject" }

k210-hal = { git = "https://github.com/tonnylyz/k210-hal", optional = true }

[dependencies.tock-registers]
version = "0.7.0"
default-features = false
features = ["register_types"]


[features]
default = []
k210 = ["k210-hal"]
tx2 = []
shyper = []
virt = []
#
#[profile.release]
#debug = true
