[package]
name = "trusted"
version = "0.1.0"
edition = "2021"
authors = ["tonnylyz <lyztonny@gmail.com>"]

build = "../build.rs"

[dependencies]
spin = "0.9.2"
log = "0.4.14"

buddy_system_allocator = { version = "0.9.0", features = ["const_fn"] }
rpsyscall = { path = "../rpsyscall" }
rpabi = { path = "../rpabi", features = ["asm"] }
rpservapi = { path = "../rpservapi" }

unwind = { path = "../3rdparty/unwind" }

xmas-elf = "0.9.0"
k210-hal = { git = "https://github.com/tonnylyz/k210-hal", optional = true }

tock-registers = "0.8.1"

redoxfs = { git = "https://github.com/tonnylyz/redoxfs", branch = "rustpi", default-features = false, features = ["rustpi"] }
redox_syscall = { git = "https://github.com/tonnylyz/redox_syscall", branch = "rustpi" }

[features]
default = []
k210 = ["k210-hal"]
tx2 = []
shyper = []
virt = []
#
#[profile.release]
#debug = true
