[package]
name = "trusted"
version = "0.1.0"
edition = "2021"
authors = ["tonnylyz <lyztonny@gmail.com>"]

[dependencies]
spin = "0.9.2"
log = "0.4.14"

buddy_system_allocator = { version = "0.9.0", features = ["const_fn"] }
rpsyscall = { path = "../rpsyscall" }
rpabi = { path = "../rpabi" }
rpservapi = { path = "../rpservapi" }

unwind = { path = "../unwind", optional = true }

xmas-elf = "0.9.0"
k210-hal = { git = "https://github.com/tonnylyz/k210-hal", optional = true }

tock-registers = "0.8.1"
hardware = { path = "../hardware" }

redoxfs = { git = "https://github.com/tonnylyz/redoxfs", branch = "rustpi", default-features = false, features = ["rustpi"] }
redox_syscall = { git = "https://github.com/tonnylyz/redox_syscall", branch = "rustpi" }

[features]
default = []
k210 = ["k210-hal"]
error_unwind = ["unwind"]

[profile.release]
debug = true

[[bin]]
name = "trusted"
path = "src/trusted.rs"