[package]
name = "user"
version = "0.1.0"
authors = ["tonnylyz <lyztonny@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "shell"
path = "src/shell.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "ls"
path = "src/ls.rs"

[[bin]]
name = "mkdir"
path = "src/mkdir.rs"

[[bin]]
name = "touch"
path = "src/touch.rs"

[[bin]]
name = "rm"
path = "src/rm.rs"

[[bin]]
name = "rd"
path = "src/rd.rs"

[[bin]]
name = "stat"
path = "src/stat.rs"

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "ps"
path = "src/ps.rs"

[[bin]]
name = "write"
path = "src/write.rs"

[[bin]]
name = "date"
path = "src/date.rs"

[dependencies]
rpstdlib = { path = "../rpstdlib" }
getopts = { git = "https://github.com/tonnylyz/getopts" }
