[package]
name = "exported"
version = "0.1.0"
authors = ["tonnylyz <lyztonny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
microcall = { path = "../microcall" }
common = { path = "../../common" }
spin = "0.9.0"
buddy_system_allocator = "0.7.0"