[package]
name = "exported"
version = "0.1.0"
authors = ["tonnylyz <lyztonny@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
buddy_system_allocator = "0.8.0"


microcall = { path = "../microcall" }
common = { path = "../../common" }
redox = { path = "../redox" }