[package]
name = "fs"
version = "0.1.0"
authors = ["tonnylyz <lyztonny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
microcall = { path = "../microcall" }
redox = { path = "../redox" }
log = "0.4.14"