[package]
name = "libtrusted"
version = "0.1.0"
authors = ["tonnylyz <lyztonny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
register = "1.0.2"
spin = "0.9.0"
buddy_system_allocator = { version = "0.7.0", features = ["const_fn"] }
xmas-elf = "0.8.0"
log = "0.4.5"

microcall = { path = "../microcall" }
common = { path = "../../common" }
redox = { path = "../redox" }
fs = { path = "../fs" }
unwind = { path = "../unwind" }