[package]
name = "libtrusted"
version = "0.1.0"
authors = ["tonnylyz <lyztonny@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.2"
buddy_system_allocator = { version = "0.8.0", features = ["const_fn"] }
xmas-elf = "0.8.0"
log = "0.4.14"

microcall = { path = "../microcall" }
common = { path = "../../common" }
redox = { path = "../redox" }
fs = { path = "../fs" }
unwind = { path = "../unwind" }


[dependencies.tock-registers]
version = "0.7.0"
default-features = false
features = ["register_types"]
