[package]
name = "trusted"
version = "0.1.0"
authors = ["tonnylyz <lyztonny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
register = "1.0.2"
spin = "0.9.0"
buddy_system_allocator = "0.7.0"
bitflags = "1.2.1"
microcall = { path = "../microcall" }
common = { path = "../../common" }
xmas-elf = "0.8.0"