[package]
name = "unwind"
version = "0.1.0"
authors = ["tonnylyz <lyztonny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.5"
fallible-iterator = { version = "0.2.0", default-features = false }
xmas-elf = "0.7.0"

[dependencies.gimli]
version = "0.19.0"
default-features = false
features = [ "read", "alloc" ]